# contract_database

./: .gitignore  README.md  pyproject.toml  schem.drawio  tox.ini
logs/: ignore_list.csv  problem.csv
notebooks/: 1.csv  check_processing_data.ipynb  create_address_file.ipynb  data_analysis.ipynb  owl.csv  processing.ipynb  qw.csv  set_number_contract.csv  test.ipynb  test_multiprocessing.ipynb  test_parsing.ipynb  test_piplines.ipynb  test_precessig_contract.ipynb  test_processing.ipynb  test_processing_2.ipynb  tets_parsing.ipynb
src/: __init__.py  constants.py  qw.ipynb  qw.py
src.egg-info/: SOURCES.txt  top_level.txt
src/get_num/: get_num.py  split_data.py
src/parsing/: extract_code_id.py  parsing_data.py  parsing_org.py  test_proxy.py
src/pipline/: parsing_pipline.py  pipline.py
src/processing/: decomposition_address.py  make_code_id_cache.py  processing_data.py
src/utils/: logger.py
