[tool.poetry]
name = "contract"
version = "0.1.0"
description = ""
authors = ["Gleb Budnik <budnikgleb@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.4"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
