[tool.poetry]
name = "contract"
version = "0.1.0"
description = ""
authors = ["Gleb Budnik <budnikgleb@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.4"
pandas = "^2.0.1"
telepot = "^12.7"
validators = "^0.20.0"
fake-useragent = "^1.1.3"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.65.0"
requests = "^2.31.0"
lxml = "^4.9.2"
pandarallel = "^1.6.5"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
